--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,8 +18,8 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .hide-on-mobile {
         display: none;
     }
-}
+} */
